--- a/test/build.gradle
+++ b/test/build.gradle
@@ -20,6 +20,7 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
@@ -32,6 +33,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
 }
